--- a/templates/web/pormibarrio/auth/social_signup.html
+++ b/templates/web/pormibarrio/auth/social_signup.html
@@ -1,46 +1,49 @@
 [% INCLUDE 'header.html', title = loc('Sign in or create an account') %]
 
-<h1>[% loc('Sign in') %]</h1>
-<p>[% loc('Please confirm your personal information') %]</p>
-
-<form action="[% c.uri_for('/auth/social_signup') %]" method="post" name="general_auth" class="validate">
-    <fieldset>
-        <input type="hidden" name="r" value="[% c.req.params.r | html %]">
-        <input type="hidden" name="facebook_id" value="[% user.facebook_id | html %]">
-        <input type="hidden" name="twitter_id" value="[% user.twitter_id | html %]">
-        <input type="hidden" name="picture_url" value="[% user.picture_url | html %]">
-        <div id="form_sign_in">
-			<div class="form-box">
-				<label for="name">[% loc('Name') %] *</label>
-				[% IF field_errors.name  %]
-					<div class="form-error">[% field_errors.name %]</div>
-				[% END %]
-				<input type="text" name="name" value="[% user.name | html %]" placeholder="[% loc('Your name') %]" required>
-				
-				<label for="email">[% loc('Email') %] *</label>
-				[% IF field_errors.email  %]
-					<div class="form-error">[% field_errors.email %]</div>
-				[% END %]
-				<input type="email" class="required email" id="email" name="email" value="[% user.email | html %]" placeholder="[% loc('Your email address') %]" required>
-
-				<label for="identity_document">[% loc('Identity document') %] *</label>
-				[% IF field_errors.identity_document  %]
-					<div class="form-error">[% field_errors.identity_document %]</div>
-				[% END %]
-				<input type="text" name="identity_document" value="[% user.identity_document | html %]" placeholder="[% loc('For example: 1.234.567-8') %]">
-
-				<label for="password">[% loc('Password') %] *</label>
-				[% IF field_errors.password  %]
-					<div class="form-error">[% field_errors.password %]</div>
-				[% END %]
-				<input type="password" name="password" value="" placeholder="[% loc('Your password') %]">
-				
-				<div class="form-txt-submit-box">
-					<input class="green-btn" type="submit" name="sign_in" value="[% loc('Sign in') %]">
-				</div>
-			</div>
+<div id="social-signup" class="reportes sub report-list">
+	<div class="ir">
+		<div class="c-t">
+			<h2>[% loc('Sign in') %]</h2>
+			<p>[% loc('Please confirm your personal information') %]</p>
 		</div>
-    </fieldset>    
-</form>
+	</div>
+	<div class="form-page">
+		<div class="rl scrolled">
+			<form action="[% c.uri_for('/auth/social_signup') %]" method="post" name="general_auth" class="validate">
+			    <fieldset>
+			        <input type="hidden" name="r" value="[% c.req.params.r | html %]">
+			        <input type="hidden" name="facebook_id" value="[% user.facebook_id | html %]">
+			        <input type="hidden" name="twitter_id" value="[% user.twitter_id | html %]">
+			        <input type="hidden" name="picture_url" value="[% user.picture_url | html %]">
+			        <div id="form_sign_in">
+						<div class="form-group">
+							<input type="text" name="name" value="[% user.name | html %]" placeholder="[% loc('Your name') %]" class="validName [% IF field_errors.name  %]error[% END %]">
+						[% IF field_errors.name  %]
+							<p class="error-m">[% field_errors.name %]</p>
+						[% END %]
+							<input type="email" class="required email [% IF field_errors.email  %]error[% END %]" id="email" name="email" value="[% user.email | html %]" placeholder="[% loc('Your email address') %] *">
+						[% IF field_errors.email  %]
+							<p class="error-m">[% field_errors.email %]</p>
+						[% END %]
+							<input type="text" name="identity_document" value="[% user.identity_document | html %]" placeholder="[% loc('For example: 1.234.567-8') %] *" class="[% IF field_errors.identity_document  %]error[% END %]">
+						[% IF field_errors.identity_document  %]
+							<p class="error-m">[% field_errors.identity_document %]</p>
+						[% END %]
+							<input type="password" name="password" value="" placeholder="[% loc('Your password') %]" class="[% IF field_errors.password  %]error[% END %]">
+						[% IF field_errors.password  %]
+							<p class="error-m">[% field_errors.password %]</p>
+						[% END %]
+						</div>
+						<div class="form-group">	
+							<div class="form-txt-submit-box">
+								<input class="btn btn-block btn-reportar" type="submit" name="sign_in" value="[% loc('Sign in') %]">
+							</div>
+						</div>
+					</div>
+			    </fieldset>    
+			</form>
+		</div>
+	</div>
+</div>
 
 [% INCLUDE 'footer.html' %]
