Agregada validacion de documento y cambio defensor x defensoria

--- a/templates/web/pormibarrio/index.html
+++ b/templates/web/pormibarrio/index.html
@@ -93,7 +93,7 @@ function video(){
             <p>Esta es una plataforma para hacer reclamos por roturas y problemas que veas en la ciudad junto a 
             vecinos y vecinas, manteniéndote al tanto del proceso de reparación. Lo llevamos adelante desde DATA 
             (una organización de la sociedad civil) usando la plataforma de servicios abiertos de la Intendencia 
-            de Montevideo y con el apoyo del Defensor del Vecino.</p>
+            de Montevideo y con el apoyo de la Defensoría del Vecino.</p>
             <div class="c-buttons-intro">
                 <a href="#" onclick="video()" class="btn btn-reportar btn-intro">Como funciona</a>
                 <a href="#" onclick="locate()" class="btn btn-green btn-intro">Comenzar ahora</a>
