--- a/web/cobrands/pormibarrio/main.css
+++ b/web/cobrands/pormibarrio/main.css
@@ -23,7 +23,7 @@ body{
 
 body.fullwidthpage{
 	width: 100%;
-	background: url("images/bg/pmb-mapa-sp.png") no-repeat scroll center top / cover rgba(0, 0, 0, 0);
+	background: url(images/bg/pmb-mapa-sp.png) no-repeat scroll center top / cover rgba(0, 0, 0, 0);
 }
 
 a, button, div.it-r {
@@ -592,12 +592,12 @@ h3.barometrica{
 	color:#d9cf48;
 }
 
-/*Vereda*/
-div.r-vereda, div.r-category-group-8 {
-	background:url(images/r-vereda.png) no-repeat left top;	
+/*Viales*/
+div.r-category-group-6 {
+	background:url(images/r-viales.png) no-repeat left top;	
 }
-h3.vereda{
-	color:#d7dadb;
+h3.r-category-group-6{
+	color:#f47229;
 }
 
 /*Desarrollo*/
@@ -1402,7 +1402,7 @@ span.name{
 	width:5px;
 	height:10px;
 	float:right;
-	background: url(../images/bg/white-arrow.png) no-repeat left top;
+	background: url(images/bg/white-arrow.png) no-repeat left top;
 	margin:5px 0 0 8px;
 }
 
@@ -1476,7 +1476,7 @@ div.profile ul li{
 
 div.profile li.dot{
 	padding-left:9px;
-	background:url(../images/bg/dot.png) no-repeat left center;
+	background:url(images/bg/dot.png) no-repeat left center;
 }
 
 div.profile ul li a{
