Cambios para barra de búsqueda, faq, e ainda

--- a/templates/web/pormibarrio/faq/faq-es.html
+++ b/templates/web/pormibarrio/faq/faq-es.html
@@ -1,7 +1,7 @@
 [% INCLUDE 'header.html', title = 'Ayuda', bodyclass = 'static' %]
 <div class="reportes sub report-list" id="faq-list">
     <div class="c-scroll">
-        <div class="rl scrolled-100">
+        <div class="rl scrolled-95">
         	<div class="como-funciona" id="q-links">
             	<h2>Información</h2>
                 <dl>
@@ -27,6 +27,10 @@
                     <dd>· <a href="#faq13" class="pregunta">¿Qué es DATA?</a></dd>
                     <dd>· <a href="#faq14" class="pregunta">¿Qué es DATA?¿Quiénes somos?</a></dd>
                     <dd>· <a href="#faq15" class="pregunta">¿Por qué lo hacemos?</a></dd>
+                </dl>
+                <dl>
+                	<dt>IM</dt>
+                	<dd>· <a href="#faq16" class="pregunta">¿Qué significan los estados que envía la IM?</a></dd>
                 </dl>
             </div>
         </div>
@@ -163,6 +167,21 @@
             	<p>
 					En nuestra visión decimos que “DATA promueve el desarrollo humano a través de la creación, uso e innovación de tecnologías basadas en datos abiertos, para aportar a mejorar nuestras sociedades y nuestros gobiernos”. Con esa consigna como bandera es que ideamos y elegimos los proyectos en los que trabajamos.
 					Por mi Barrio es  -y consideramos este punto sumamente importante- una iniciativa que no se termina en la web. Forma parte del programa Ciudades Abiertas de DATA, que pretende transformar las relaciones entre la ciudadanía y los gobiernos locales, empoderando a las personas para participar y colaborar en la resolución de problemas urbanos a través de plataformas web y móviles. Para lograrlo, la plataforma en línea es sólo el primer paso y el programa abarca 18 meses que van desde el desarrollo (etapa actual) hasta el dictado de talleres en los barrios de muy diversas zonas de Montevideo para capacitar a los/as vecinos/as en el uso de la herramienta, al tiempo que tenemos la oportunidad de conocer cómo se utiliza y mejorarla para su aplicación local.
+				</p>
+			</div>
+			<div class="respuesta" id="faq16">
+            	<h2>¿Que significan los estados que envía la IM acerca de un reporte?</h2>
+            	<p>
+					En el SUR - Sistema Unico de Reclamo (sistema único donde se gestionan los reclamos de la IM), se manejan tres estados:
+				</p>
+				<p>
+					1. Ingresado, significa que su reclamo a entrado en el sistema informático y está pronto para ser visualizado por los funcionarios municipales. En el reporte de Por Mi Barrio aparece "Se ha creado el reclamo".
+				</p>
+				<p>
+					2. En Proceso, significa que su reclamo ha sido revisado por un funcionario municipal y se comenzó con las tareas para resolverlo y por lo menos se generó una orden de trabajo para el mismo. En esta instancia pueden haber trabajos planificados o realizados, que tienen su informe correspondiente en la consulta de reclamos. En el reporte de Por Mi Barrio aparece "El problema asociado ha quedado en proceso".
+				</p>
+				<p>
+					3. Finalizado, significa que su reclamo ha finalizado para la IM, ya sea porque se terminaron todos los trabajos para solucionarlo, o su reclamo no correspondía. En la consulta de reclamos puede verse el informe donde se le indica lo realizado por la IM. En el reporte de Por Mi Barrio aparece "El problema asociado al reclamo ha quedado finalizado".
 				</p>
 			</div>
         </div>
